added udiskie start

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -50,6 +50,7 @@ exec-once = swww-daemon
 exec-once = dunst
 exec-once = hypridle
 exec-once = xdg-portal-hyprland
+exec-once = udiskie
 
 #############################
 ### ENVIRONMENT VARIABLES ###
