fixed steam scaling issues

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -73,9 +73,9 @@ env = XDG_CURRENT_DESKTOP,Hyprland
 env = QT_WAYLAND_DISABLE_WINDOWDECORATION,1
 env = GDK_BACKEND,wayland
 
+xwayland:use_nearest_neighbor = false
 xwayland {
-    force_zero_scaling = false 
-    use_nearest_neighbor = true 
+    force_zero_scaling = true 
     enabled = true
   }
 
