--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -7,32 +7,17 @@
 #        |___/|_|                             
 
 
-################
-### MONITORS ###
-################
-
-# See https://wiki.hyprland.org/Configuring/Monitors/
+#<--- MONITORS --->
 monitor=, 2560x1600,auto,auto
 
-###################
+
 ### MY PROGRAMS ###
-###################
-
-# See https://wiki.hyprland.org/Configuring/Keywords/
-
-# Set programs that you use
 $terminal = kitty
 $fileManager = dolphin
 $menu = rofi -show drun
 
 
-#################
 ### AUTOSTART ###
-#################
-
-# Autostart necessary processes (like notifications daemons, status bars, etc.)
-# Or execute your favorite apps at launch like this:
-
 exec-once = systemctl --user start hyprpolkitagent
 exec-once = waybar
 exec-once = swww-daemon
@@ -41,12 +26,8 @@ exec-once = hypridle
 exec-once = xdg-portal-hyprland
 exec-once = udiskie
 
-#############################
+
 ### ENVIRONMENT VARIABLES ###
-#############################
-
-# See https://wiki.hyprland.org/Configuring/Environment-variables/
-
 env = XCURSOR_SIZE,16
 env = HYPRCURSOR_SIZE,16
 env = QT_AUTO_SCREEN_SCALE_FACTOR,1
@@ -68,37 +49,21 @@ xwayland {
     enabled = true
   }
 
-#####################
+
 ### LOOK AND FEEL ###
-#####################
-
-# Refer to https://wiki.hyprland.org/Configuring/Variables/
-
-# https://wiki.hyprland.org/Configuring/Variables/#general
 general {
     gaps_in = 8
     gaps_out = 2, 20, 20, 20
-
     border_size = 1
-
-    # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
     col.active_border = rgba(133,135,122,1)
-
-    # Set to true enable resizing windows by clicking and dragging on borders and gaps
     resize_on_border = false
-
-    # Please see https://wiki.hyprland.org/Configuring/Tearing/ before you turn this on
     allow_tearing = false
-
     layout = dwindle
 }
 
-# https://wiki.hyprland.org/Configuring/Variables/#decoration
 decoration {
     rounding = 3
     rounding_power = 2
-
-    # Change transparency of focused and unfocused windows
     active_opacity = 1.0
     inactive_opacity = 0.9
 
@@ -119,7 +84,6 @@ decoration {
     }
 }
 
-# https://wiki.hyprland.org/Configuring/Variables/#animations
 animations {
     enabled = yes, please :)
 
@@ -149,30 +113,22 @@ animations {
     animation = workspacesOut, 1, 1.94, almostLinear, fade
 }
 
-
-# See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
 dwindle {
     pseudotile = true # Master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
     preserve_split = true # You probably want this
 }
 
-# See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
 master {
     new_status = master
 }
 
-# https://wiki.hyprland.org/Configuring/Variables/#misc
 misc {
     force_default_wallpaper = 1 # Set to 0 or 1 to disable the anime mascot wallpapers
     disable_hyprland_logo = true # If true disables the random hyprland logo / anime girl background. :(
 }
 
 
-#############
 ### INPUT ###
-#############
-
-# https://wiki.hyprland.org/Configuring/Variables/#input
 input {
     kb_layout = us
     kb_variant =
@@ -190,27 +146,19 @@ input {
     }
 }
 
-# https://wiki.hyprland.org/Configuring/Variables/#gestures
 gestures {
     workspace_swipe = true
 }
 
-# Example per-device config
-# See https://wiki.hyprland.org/Configuring/Keywords/#per-device-input-configs for more
 device {
     name = epic-mouse-v1
     sensitivity = -0.5
 }
 
 
-###################
 ### KEYBINDINGS ###
-###################
-
-# See https://wiki.hyprland.org/Configuring/Keywords/
 $mainMod = SUPER # Sets "Windows" key as main modifier
 
-# Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, RETURN, exec, $terminal
 bind = $mainMod SHIFT, RETURN, exec, [float; move 752 34; size 504 342] kitty
 bind = $mainMod, Q, killactive,
@@ -282,13 +230,8 @@ bindl = , XF86AudioPause, exec, playerctl play-pause
 bindl = , XF86AudioPlay, exec, playerctl play-pause
 bindl = , XF86AudioPrev, exec, playerctl previous
 
-##############################
+
 ### WINDOWS AND WORKSPACES ###
-##############################
-
-# Ignore maximize requests from apps. You'll probably like this.
 windowrulev2 = suppressevent maximize, class:.*
-
-# Fix some dragging issues with XWayland
 windowrulev2 = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
 
