--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -26,6 +26,11 @@ exec-once = hypridle
 exec-once = xdg-portal-hyprland
 exec-once = udiskie
 
+exec-once = [Workspace 1 silent] kitty
+exec-once = [Workspace 2 silent] firefox
+exec-once = [Workspace 3 silent] spotify-launcher
+exec-once = [Workspace 4 silent] discord
+
 
 ### ENVIRONMENT VARIABLES ###
 env = XCURSOR_SIZE,16
