added apps to launch on startup

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -26,10 +26,10 @@ exec-once = hypridle
 exec-once = xdg-portal-hyprland
 exec-once = udiskie
 
-exec-once = [Workspace 1 silent] kitty
-exec-once = [Workspace 2 silent] firefox
-exec-once = [Workspace 3 silent] spotify-launcher
-exec-once = [Workspace 4 silent] discord 
+exec-once = [workspace 1 silent] kitty
+exec-once = [workspace 2 silent] firefox
+exec-once = [workspace 3 silent] spotify-launcher
+exec-once = [workspace 4 silent] discord 
 
 
 ### ENVIRONMENT VARIABLES ###
