windowrules for anki

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -234,4 +234,7 @@ bindl = , XF86AudioPrev, exec, playerctl previous
 ### WINDOWS AND WORKSPACES ###
 windowrulev2 = suppressevent maximize, class:.*
 windowrulev2 = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
+windowrule = float, class:anki
+windowrulev2 = move: 256 147, class: anki
+windowrulev2 = size: 768 520, class: anki
 
