--- a/fastfetch/config.jsonc
+++ b/fastfetch/config.jsonc
@@ -1,7 +1,7 @@
 {
   "logo": {
-    "source": ".config/fastfetch/images/power.png",
-    "width": 25,
+    "source": "/home/shoozi/.config/themes/power/logo.png",
+    "width": 30,
     "padding": {
       "top": 1,
       "right": 6
