--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -56,7 +56,7 @@ general {
     gaps_out = 2, 10, 10, 10
     border_size = 1
     col.active_border = rgba(255,255,255,0.3)
-    resize_on_border = false
+    resize_on_border = true
     allow_tearing = false
     layout = dwindle
 }
@@ -165,6 +165,7 @@ bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
 bind = ALT, SPACE, exec, $menu
+bind = CTRL, SPACE, exec, ~/.config/scripts/rofiThemeChanger.zsh
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, B, exec, firefox
