--- a/fastfetch/config.jsonc
+++ b/fastfetch/config.jsonc
@@ -1,6 +1,6 @@
 {
   "logo": {
-    "source": "/home/shoozi/.config/themes/makima/logo.png",
+    "source": "/home/shoozi/.config/themes/himeno/logo.jpg",
     "width": 30,
     "padding": {
       "top": 1,
