--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -231,4 +231,7 @@ windowrulev2 = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinn
 windowrule = float, class:anki
 windowrulev2 = move: 256 147, class: anki
 windowrulev2 = size: 768 520, class: anki
+windowrule = float, class: mpv
+windowrulev2 = move: 12 35, class: mpv 
+windowrulev2 = size: 1256 753, class: mpv
 
