--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -21,10 +21,9 @@ $menu = rofi -show drun
 exec-once = systemctl --user start hyprpolkitagent
 exec-once = waybar
 exec-once = swww-daemon
-exec-once = dunst
+exec-once = swaync
 exec-once = hypridle
 exec-once = xdg-portal-hyprland
-exec-once = udiskie
 
 
 ### ENVIRONMENT VARIABLES ###
@@ -159,7 +158,7 @@ bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
 bind = ALT, SPACE, exec, $menu
-bind = CTRL, SPACE, exec, ~/.config/scripts/rofiThemeChanger.zsh
+bind = CTRL, SPACE, exec, ~/bin/rofiThemeChanger.zsh
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, B, exec, firefox
