major changes to waybar and swaync

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -8,7 +8,8 @@
 
 
 #<--- MONITORS --->
-monitor=, 2560x1600,auto,auto
+#monitor=, 2560x1600,auto,auto
+monitor = eDP-1, 2560x1600@60, 0x0, 2
 
 
 ### MY PROGRAMS ###
@@ -29,19 +30,8 @@ exec-once = xdg-portal-hyprland
 ### ENVIRONMENT VARIABLES ###
 env = XCURSOR_SIZE,16
 env = HYPRCURSOR_SIZE,16
-env = QT_AUTO_SCREEN_SCALE_FACTOR,1
-env = QT_QPA_PLATFORM,wayland;xcb
-env = QT_QPA_PLATFORMTHEME,q6ct
-env = QT_SCALE_FACTOR,1
-env = GDK_SCALE,1
-env = MOZ_ENABLE_WAYLAND,1
-env = WAYLAND_DISPLAY=wayland-0
-env = XDG_SESSION_DESKTOP,Hyprland
-env = XDG_SESSION_TYPE,wayland
-env = XDG_CURRENT_DESKTOP,Hyprland
-env = QT_WAYLAND_DISABLE_WINDOWDECORATION,1
-env = GDK_BACKEND,wayland
-
+env = WLR_DRM_NO_ATOMIC,1
+env = CLIPHIST_MAX_ITEM,100 # Max items for clipboard history
 
 ### LOOK AND FEEL ###
 general {
@@ -234,3 +224,13 @@ windowrule = float, class: mpv
 windowrulev2 = move: 12 35, class: mpv 
 windowrulev2 = size: 1256 753, class: mpv
 
+### Layerrules ###
+layerrule = xray 1, .*
+layerrule = blur, swaync-control-center
+layerrule = blur, swaync-notification-window
+layerrule = ignorezero, swaync-control-center
+layerrule = ignorezero, swaync-notification-window
+layerrule = ignorealpha 0.5, swaync-control-center
+layerrule = ignorealpha 0.5, swaync-notification-window
+layerrule = xray 0, swaync-control-center
+layerrule = xray 0, swaync-notification-window
