--- a/swaync/config.json
+++ b/swaync/config.json
@@ -6,9 +6,9 @@
     "control-center-layer": "top",
     "layer-shell": true,
     "cssPriority": "application",
-    "control-center-width": 300,
-    "control-center-margin-top": 8,
-    "control-center-margin-bottom": 8,
+    "control-center-width": 350,
+    "control-center-margin-top": 2,
+    "control-center-margin-bottom": 10,
     "control-center-margin-right": 8,
     "control-center-margin-left": 0,
     "notification-2fa-action": true,
@@ -28,29 +28,13 @@
     "hide-on-action": true,
     "script-fail-notify": true,
     "widgets": [
+        "buttons-grid",
         "mpris",
-        "title",
-        "notifications",
         "volume",
-        "buttons-grid"
+        "title",
+        "notifications"
     ],
     "widget-config": {
-        "title": {
-            "text": "Notification Center",
-            "clear-all-button": true,
-            "button-text": "󰆴"
-        },
-        "label": {
-            "max-lines": 1,
-            "text": "Notification Center!"
-        },
-        "mpris": {
-            "image-size": 80,
-            "image-radius": 0
-        },
-        "volume": {
-            "label": " "
-        },
         "buttons-grid": {
             "actions": [
                 {
@@ -74,24 +58,6 @@
                     "type": "open"
                 },
                 {
-                    "label": "󰂭",
-                    "command": "swaync-client -d",
-                    "type": "toggle"
-                },
-                {
-                    "label": "󰀟",
-                    "command": "gnome-network-displays & swaync-client -cp",
-                    "type": "open"
-                },
-                {
-                    "label": "󰈙",
-                    "command": "nautilus ~/Documents/"
-                },
-                {
-                    "label": "",
-                    "command": "notify-send \"No\""
-                },
-                {
                     "label": "",
                     "command": "kitty --class floating -e btop & swaync-client -cp",
                     "type": "open"
@@ -109,6 +75,18 @@
                     "command": "shutdown now"
                 }
             ]
+        },
+        "volume": {
+            "label": " "
+        },
+        "title": {
+            "text": "Notifications",
+            "clear-all-button": true,
+            "button-text": "󰆴"
+        },
+        "mpris": {
+            "image-size": 50,
+            "loop-carousel": false
         }
     }
 }
