--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -223,14 +223,5 @@ windowrulev2 = size: 768 520, class: anki
 windowrule = float, class: mpv
 windowrulev2 = move: 12 35, class: mpv 
 windowrulev2 = size: 1256 753, class: mpv
-
-### Layerrules ###
-layerrule = xray 1, .*
-layerrule = blur, swaync-control-center
-layerrule = blur, swaync-notification-window
-layerrule = ignorezero, swaync-control-center
-layerrule = ignorezero, swaync-notification-window
-layerrule = ignorealpha 0.5, swaync-control-center
-layerrule = ignorealpha 0.5, swaync-notification-window
-layerrule = xray 0, swaync-control-center
-layerrule = xray 0, swaync-notification-window
+windowrulev2 = float, class: blueman-manager
+windowrulev2 = float, class: org.pulseaudio.pavucontrol
