added setwal script to zshrc for setting wallpapers and color schemes that exist outside of /themes

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -225,3 +225,5 @@ windowrulev2 = move: 12 35, class: mpv
 windowrulev2 = size: 1256 753, class: mpv
 windowrulev2 = float, class: blueman-manager
 windowrulev2 = float, class: org.pulseaudio.pavucontrol
+windowrulev2 = float, class:^(electron)$, title:^(Location)$
+windowrulev2 = center, class:^(electron)$, title:^(Location)$
