--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -6,6 +6,8 @@
 # |_| |_|\__, | .__/|_|  |_|\__,_|_| |_|\__,_|
 #        |___/|_|                             
 
+# set pywal colors 
+source = ~/.cache/wal/colors
 
 #<--- MONITORS --->
 #monitor=, 2560x1600,auto,auto
