--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -224,7 +224,7 @@
     "temperature": {
         "critical-threshold": 80,
         "format": "{temperatureC}° ",
-        "hwmon-path": "/sys/devices/pci0000:00/0000:00:18.3/hwmon/hwmon1/temp1_input",
+        "hwmon-path": "/sys/class/hwmon/hwmon8/temp1_input",
         "tooltip-format": "CPU: {temperatureC}°C"
     },
     "tray": {
