--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -222,9 +222,10 @@
         "tooltip": true
     },
     "temperature": {
+        "thermal-zone": 12,
         "critical-threshold": 80,
         "format": "{temperatureC}° ",
-        "hwmon-path": "/sys/class/hwmon/hwmon8/temp1_input",
+        //"hwmon-path": "/sys/class/hwmon/hwmon8/temp1_input",
         "tooltip-format": "CPU: {temperatureC}°C"
     },
     "tray": {
